# rest-api

./: package-lock.json  package.json  vite.config.js
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: RequestEditor.vue  ResponseViewer.vue  Sidebar.vue
src/composables/: useApiHandler.js
src/views/: ApiTool.vue
